# yaoaic

./: Cargo.toml  README.md
chatgpt-prompts/: Cargo.toml
chatgpt-prompts/src/: lib.rs
cli/: Cargo.toml
cli/src/: cache.rs  main.rs  toml_file.rs
lib/: Cargo.toml
lib/src/: lib.rs
