[package]
name = "yaoaic-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
yaoaic = {path = "../lib" }
prompts = {path = "../chatgpt-prompts", package = "yaoaic-chatgpt-prompts" }
serde = { version = "1.0.159", features = ["serde_derive"] }
toml = "0.7.3"
anyhow = "1.0.70"
