[package]
name = "yaoaic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "0.14.25", features = ["client", "full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
